# dce-campaign-builder

./: .gitignore  Cargo.toml  Readme.md
.github/workflows/: ci.yml
dce-lib/: Cargo.toml  db_airbases.lua  test.lua
dce-lib/lua/: add_statics_to_mission.lua  export_airfields.lua  serialization.lua  standlist_cauc.lua  standlist_ch.lua  standlist_mar.lua  standlist_norm.lua  standlist_nv.lua  standlist_pg.lua  standlist_sa.lua  standlist_si.lua  standlist_sy.lua  trigger_mocks.lua
dce-lib/resources/: FirstMission.bat  SkipMission.bat
dce-lib/src/: bin_data.rs  campaign_header.rs  cmp_file.rs  conf_mod.rs  db_airbases.rs  db_airbases_internal.rs  dce_utils.rs  dcs_airbase_export.rs  dcs_beacon_export.rs  editable.rs  lib.rs  loadouts.rs  loadouts_internal.rs  lua_utils.rs  mappable.rs  mission.rs  mission_dictionary.rs  mission_warehouses.rs  miz_environment.rs  oob_air.rs  projections.rs  serde_utils.rs  target_list.rs  target_list_internal.rs  trigger.rs
dce-lib/src/miz_hacks/: mod.rs
dce-lib/src/targets/: anti_ship.rs  awacs.rs  cap.rs  fighter_sweep.rs  intercept.rs  mod.rs  refueling.rs  strike.rs
dce-lib/test_resources/: base_mission.miz  base_mission_falklands.miz  base_mission_sinai_farps.miz  base_mission_syria.miz  farp_test.miz  sinai 80s.miz
docs/: loadout_rules.md  quick_start.md
lua/: serialization.lua
tables/: Cargo.toml
tables/src/: lib.rs
ui/: Cargo.toml
ui/images/: airfield.xcf
ui/src/: main.rs  selectable.rs
ui/src/css/: base.css
ui/src/helpers/: edit_items.rs  mod.rs  select_first_helpers.rs
ui/src/js/: leaflet_utils.js
ui/src/rsx/: edit_form.rs  image_edit.rs  image_table.rs  map.rs  menubar.rs  mod.rs  modal_dialog.rs  table.rs
ui/wix/: main.wxs
