[package]
name = "dce-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
approx_eq = "0.1.8"
log = "0.4.17"
mlua = {version="0.8.8", features=["lua54", "vendored", "serialize"]}
proj = {version="0.27.0", features=["pkg_config"]}
serde = {version="1.0.160", features=["serde_derive"]}
serde_json = "1.0.96"
serde_path_to_error = "0.1.11"
void = "1.0.2"
zip = "0.6.5"
