[package]
name = "ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.3.2"
dioxus-desktop = "0.3.0"
fermi = "0.3.0"
anyhow = "1.0.70"
serde = "1.0.160"
log = "0.4.17"
simple_logger = "4.1.0"
dce-lib = { path = "../dce-lib" }
tables = { path = "../tables" }
tokio = "1.28.0"
rand = "0.8.5"
serde_json = "1.0.96"
zip = "0.6.5"
bevy_reflect = "0.10.1"
native-dialog = { version = "0.6.3", features = [
    "windows_dpi_awareness",
    "windows_visual_styles",
] }
